--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'idea'
 
 jar {
-    baseName = 'gs-messaging-stomp-websocket'
+    baseName = 'spring-websocket-chat'
     version =  '0.1.0'
 }
 sourceCompatibility = 1.8
@@ -26,6 +26,10 @@ repositories {
 }
 
 dependencies {
+    compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-redis")
     compile 'org.springframework:spring-context:4.3.7.RELEASE'
     compile("org.springframework.boot:spring-boot-starter-websocket")
     compile("org.webjars:webjars-locator")
