--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-redis")
     compile("org.springframework.boot:spring-boot-starter-websocket")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.session:spring-session:$springSessionVersion")
     compile("org.webjars:webjars-locator")
     compile("org.webjars:sockjs-client:1.0.2")
