--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-redis")
     compile("org.springframework.boot:spring-boot-starter-websocket")
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.session:spring-session:$springSessionVersion")
     compile("org.webjars:webjars-locator")
@@ -45,6 +46,8 @@ dependencies {
     compile("org.webjars:bootstrap:3.3.7")
     compile("org.webjars:jquery:3.1.0")
     compile("com.github.kstyrc:embedded-redis:0.6")
+    compile("mysql:mysql-connector-java")
+
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
